--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
   height: 8vh;
   font-family: "Lucida Console", Monospace;
   text-align: center;
-  font-size: large;
+  font-size: 2vw;
   vertical-align: middle;
   line-height: 8vh; 
 }
@@ -59,5 +59,6 @@ a:hover {
   color:#FFFFFF
 }
 a {
+  font-size: 2vw;
   color:#FFFFFF
 }
