--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,9 @@ h3{
   margin: 40px auto;
 }
 a:hover {
-  color:#FFFFFF
+  color:#FFFFFF;
 }
 a {
-  color:#FFFFFF
+  font-size: 105%;
+  color:#FFFFFF;
 }
