--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@
 body {
   color: #FFFFFF;
   font-family: "Lucida Console", Monospace;
-  font-size: large;
+  font-size: 16px;
   line-height: 1.5;
 }
 p {
